<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">Background Image</string>
    <string name="logo">Swoosh Logo</string>
    <string name="desired_league">Desired League:</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-ed</string>
    <string name="next">NEXT</string>
    <string name="get_started">GET STARTED</string>
    <string name="find_a_team_in_your_city_amp_dominate_the_league"><![CDATA[Find a team in your city & dominate the league]]></string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">FINISH</string>
    <string name="Search_League">Looking for co-ed beginner league near you…</string>
</resources>
